# laser-sef

./: .gitignore  funcoes.py  organizar.py  pyproject.toml  teste.py  zippar.py
