[tool.poetry]
name = "laser-sef"
version = "0.1.0"
description = ""
authors = ["Paulo Rodrigues"]

[tool.poetry.dependencies]
python = "^3.9"
dicttoxml = "^1.7.4"
xmltodict = "^0.12.0"
pandas = "^1.1.4"
regex = "^2020.11.13"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
